// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Layoutgrid component renders children correctly 1`] = `
<View
  style={
    {
      "flexDirection": "column",
      "width": "100%",
    }
  }
  testID="layoutgrid"
>
  <View>
    <Text>
      Child Component
    </Text>
  </View>
</View>
`;

exports[`Test Layoutgrid component renders layout grid properly 1`] = `
<View
  style={
    {
      "flexDirection": "column",
      "width": "100%",
    }
  }
  testID="layoutgrid"
/>
`;

exports[`Test Layoutgrid component should render a skeleton with given width and height 1`] = `
<View
  style={
    {
      "flexDirection": "column",
      "width": "100%",
    }
  }
  testID="layoutgrid"
/>
`;
